feat: 新增资源跨存储迁移与历史链接接管能力